<resources>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
<string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_search_hint">Search…</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="status_bar_notification_info_overflow">999+</string>
<string name="AbroadRoamingArea">Roaming Area. Service Not Available</string>
<string name="Add">Add</string>
<string name="AirPlaneMode">Airplane Mode Is On. Service Not Available</string>
<string name="Albums">Albums</string>
<string name="Artists">Artists</string>
<string name="BitRate">Bit rate</string>
<string name="Cancel">Cancel</string>
<string name="Confirm">Confirm</string>
<string name="ContentDescription">Content description</string>
<string name="DRMError_Bad_DCF_Inform">Bad DCF Inform</string>
<string name="DRMError_Date_Expired">DRM license expired</string>
<string name="DRMError_Device_Not_Registered">Device is not registered</string>
<string name="DRMError_Invalid_Allowable_Service">Invalid Service</string>
<string name="DRMError_Invalid_Ownership">Invalid owner</string>
<string name="DRMError_Invalid_ServiceTime">Invalid service time</string>
<string name="DRMError_Not_Valid_AuthTime">Not valid authTime</string>
<string name="DRMError_Not_Valid_Time">Not valid time</string>
<string name="DateAdded">Date added</string>
<string name="Delete">Delete</string>
<string name="DiscNumber">Disc number</string>
<string name="Done">Done</string>
<string name="Dosirak">Olleh Music</string>
<string name="DrmCertifyNotValid">Invalid authentication</string>
<string name="DrmConnectServerFail">Unable to access the Online Store</string>
<string name="DrmContentsFail">Abnormal files</string>
<string name="DrmGetRoFail">Failure to obtain RO</string>
<string name="DrmGetVFail">Failure to obtain Vender</string>
<string name="DrmMusicFirst">Unable to play due to license expiration</string>
<string name="DrmRoAgentPassword">Install RO</string>
<string name="DrmRoCleanFail">RO Storage Clean - Fail!!</string>
<string name="DrmRoCleanSuccess">RO Storage Clean - Success!!</string>
<string name="DrmRoFail">Invalid authentication C RO</string>
<string name="DrmRoInstallFail">Unable to authenticate !</string>
<string name="DrmRoapFail">RO communication Fail</string>
<string name="DrmRoexpiredFail">Invalid authentication P RO</string>
<string name="DrmRoinitiateFail">RO initialization Fail</string>
<string name="DrmServerTitle">Current DRM Server :</string>
<string name="Duration">Duration</string>
<string name="FileName">File name</string>
<string name="FileSize">File size</string>
<string name="Format">Format</string>
<string name="Genre">Genres</string>
<string name="Information">Information</string>
<string name="License">License</string>
<string name="Location">Location</string>
<string name="Melon">MelOn</string>
<string name="MenuDeSelectAll">Deselect all</string>
<string name="MenuDelete">Delete</string>
<string name="MenuMusicLife">Music Life</string>
<string name="MenuNewPlaylist">"New
playlist"</string>
<string name="MenuSearch">Search</string>
<string name="MenuSelectAll">Select all</string>
<string name="MenuSettings">Settings</string>
<string name="MenuSortBySimilarName">Search duplicated music</string>
<string name="MenuStorePlayList">Save to playlist</string>
<string name="MostPlayed">Most played</string>
<string name="MusicLifeGroupEmotion">Emotion</string>
<string name="MusicLifeGroupSituation">Situation</string>
<string name="MusicLifeGroupWeather">Weather</string>
<string name="MusicLifeItemAngry">Angry</string>
<string name="MusicLifeItemCalm">Calm</string>
<string name="MusicLifeItemDriving">Driving</string>
<string name="MusicLifeItemFineday">Fine</string>
<string name="MusicLifeItemHappy">Happy</string>
<string name="MusicLifeItemHealing">Healing</string>
<string name="MusicLifeItemRainy">Rainy</string>
<string name="MusicLifeItemRemembrance">Remebrance</string>
<string name="MusicLifeItemSad">Sad</string>
<string name="MusicLifeItemSnowy">Snowy</string>
<string name="MusicLifeItemWorkout">Workout</string>
<string name="MusicPlayListShortCut">Music playlist</string>
<string name="MusicPlaybackLabel">Music</string>
<string name="NewPlayListName">Playlist name</string>
<string name="No">No</string>
<string name="NotSupportNetwork">"Wireless network is turned off.
Check network settings."</string>
<string name="NowPlaying">Now playing</string>
<string name="PlayCount">Play count</string>
<string name="Playlists">Playlists</string>
<string name="QMenuDelete">Delete</string>
<string name="QMenuProperties">Properties</string>
<string name="QMenuRemove">Remove from playlist</string>
<string name="QMenuRemovePlaylist">Remove playlist</string>
<string name="QMenuRename">Rename</string>
<string name="QMenuSend">Send</string>
<string name="QMenuSetAsRingtone">Set as ringtone</string>
<string name="QMenuShare">Sharing</string>
<string name="QMenuShareOnlineService">Share related contents</string>
<string name="QMenuTagEdit">Edit</string>
<string name="Question">Question</string>
<string name="Rating">Rating</string>
<string name="RearrangeDeleteNowPlayToast">Removed selected song from now playing list</string>
<string name="RearrangeDeleteToast">Removed selected song from list</string>
<string name="RearrangeRemoveFromList">Remove from list</string>
<string name="Recentlyadded">Recently added</string>
<string name="Remove">Remove</string>
<string name="Save">Save</string>
<string name="Setting3gNotiPopup">Data network connection notification</string>
<string name="SettingDescriptionAudioEffect">Manage detailed sound effect</string>
<string name="SettingDescriptionAutoPlugnPlay">Resume playing when wired earphone is connected to the phone</string>
<string name="SettingDescriptionDataNetwork">Enable notify when function that requires data network is run</string>
<string name="SettingDescriptionDisplayTitleOption">Display songs based on actual filename</string>
<string name="SettingDescriptionSleepMode">Music player will be stopped when the preset time has elapsed</string>
<string name="SettingNotInstalledAudioEffectApp">Please cancel disabled sound effect in system settings</string>
<string name="SettingPopupTitleTabCategory">Select tab category</string>
<string name="SettingSubTitleAudioEffect">Sound effect</string>
<string name="SettingSubTitleAutoPlugnPlay">Auto plug-n-play</string>
<string name="SettingSubTitleDisplayTitleOption">Display filename</string>
<string name="SettingSubTitleSleepMode">Sleep mode</string>
<string name="SettingTitleCustomize">Customize setting</string>
<string name="SettingTitleNotification">Notification setting</string>
<string name="SimiraritySort">Duplicated music</string>
<string name="Songs">Songs</string>
<string name="Title">Title</string>
<string name="TitleDefaultPlaylistPrefix">Playlist</string>
<string name="TitleEQSetting">Equalizer preset</string>
<string name="TitleEmptyContentsMainString">No Contents to play</string>
<string name="TitleEmptyContentsSubString">You can add music by connecting your cell phone to a computer via a USB cable</string>
<string name="TitleEmptyFavoritesMainString">No Favorites</string>
<string name="TitleEmptyMostPlayedMainString">No Most Played</string>
<string name="TitleEmptyPlaylistMainString">No Playlists</string>
<string name="TitleEmptyRecentlyAddedMainString">No Recently Added</string>
<string name="TitleMakePlaylist">Create new playlist</string>
<string name="TitleNoPlaylist">No playlist</string>
<string name="TitleNoSearchResult">No results found</string>
<string name="TitleRenamePlaylist">Rename Playlist</string>
<string name="TitleSearch">Search music</string>
<string name="TitleSetting">settings</string>
<string name="TitleUnSet">No Effect</string>
<string name="TitleUserPreset">User preset</string>
<string name="TrackNumber">Track number</string>
<string name="UBoxPlaylists">U+Box Playlists</string>
<string name="UnableToPlayByError">Unable to play</string>
<string name="UnableToPlayByNotSupported">Unknown file format</string>
<string name="UnableToPlayByStorage">Unable to play</string>
<string name="UnknownTitle">Unknown title</string>
<string name="VolumeSetting">Volume</string>
<string name="WidgetDefaultViewMessage">"No music selected
Add or play music you want"</string>
<string name="Year">Year</string>
<string name="Yes">Yes</string>
<string name="addtocart_error_invalid_contents_type">Unable to play with streaming music</string>
<string name="addtocart_favorite">Favorites</string>
<string name="addtocart_make_newplaylist">Make new playlist</string>
<string name="addtocart_nowplaying">Now Playing list</string>
<string name="addtocart_result_error">Unexpected error occurred</string>
<string name="addtocart_result_error_duplication">Same file already exist</string>
<string name="app_name">Music</string>
<string name="cancel">Cancel</string>
<string name="detailcontroller_name">Fine Adjustment</string>
<string name="fastforward">fast forward</string>
<string name="goto_list">Go to list</string>
<string name="list_actionMode_add_tracks">Add</string>
<string name="list_actionmode_command_cart">Add</string>
<string name="list_actionmode_command_delete">Delete</string>
<string name="list_actionmode_command_menu">Menu</string>
<string name="list_actionmode_command_play">Play</string>
<string name="list_actionmode_command_remove">Remove</string>
<string name="oneplayer_help_guide_text1">"Press the wheel key to 
open the ONE Player.
Then rotate the wheel 
key to navigate 
through a playlist."</string>
<string name="oneplayer_help_guide_text3">"On these apps, you can use the wheel key
to fine adjustment."</string>
<string name="oneplayer_name">ONE Player</string>
<string name="playback_menu_addtoplaylist">Add to playlist</string>
<string name="playback_menu_properties">Properties</string>
<string name="playback_menu_ringtone">Set as ringtone</string>
<string name="playback_menu_search">Search</string>
<string name="playback_menu_settings">Settings</string>
<string name="pref_key_audio_effect">audio_effect</string>
<string name="pref_key_category_view_items">category_view_items</string>
<string name="pref_key_connect_data_noti">connect_data_notification</string>
<string name="pref_key_headset_plug_auto_play">headset_plug_auto_play</string>
<string name="pref_key_list_display_filename">list_display_filename</string>
<string name="pref_key_playback_auto_stop">auto_stop</string>
<string name="seekminus">minus seek</string>
<string name="seekplus">plus seek</string>
<string name="time">Time</string>
<string name="transition_albumArt">TransitionAlbumArt</string>
<string name="transition_recyclerView">TransitionRecyclerView</string>
<string name="widget_header_nowplayinglist">Now playing list</string>
<string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>