<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/list_action_mode_bottom_layout" android:background="@color/list_actionmode_button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="48.0dip">
	<Button android:id="@id/list_action_mode_play" android:text="@string/list_actionmode_command_play" style="@style/ListConfirmButton" />
	<Button android:id="@id/list_action_mode_cart" android:text="@string/list_actionmode_command_cart" style="@style/ListConfirmButton" />
	<Button android:id="@id/list_action_mode_delete" android:text="@string/list_actionmode_command_delete" style="@style/ListConfirmButton" />
	<Button android:id="@id/list_action_mode_remove" android:text="@string/list_actionmode_command_remove" style="@style/ListConfirmButton" />
	<Button android:id="@id/list_action_mode_cancel" android:text="@string/cancel" style="@style/ListConfirmButton" />
	<Button android:id="@id/list_action_mode_add" android:text="@string/list_actionMode_add_tracks" style="@style/ListConfirmButton" />
	<ImageButton android:id="@id/list_action_mode_menu" android:background="@drawable/ripple_effect_for_confirm_button" android:layout_width="39.0dip" android:layout_height="fill_parent" android:src="@drawable/list_action_mode_menu" android:contentDescription="@string/app_name" android:elevation="0.0dip" />
</LinearLayout>
