<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:fadingEdgeLength="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<LinearLayout style="@style/TagEditItemLayout">
			<TextView android:text="@string/Title" style="@style/TagEditItemText" />
			<com.pantech.app.music.view.SkyEditText android:id="@id/tag_edittext_title" android:singleLine="true" android:maxLength="100" android:inputType="textAutoCorrect" style="@style/TagEditItemEditText" />
		</LinearLayout>
		<LinearLayout style="@style/TagEditItemDivider" />
		<LinearLayout style="@style/TagEditItemLayout">
			<TextView android:text="@string/Artists" style="@style/TagEditItemText" />
			<com.pantech.app.music.view.SkyEditText android:id="@id/tag_edittext_artist" android:maxLength="100" android:inputType="textAutoCorrect" style="@style/TagEditItemEditText" />
		</LinearLayout>
		<LinearLayout style="@style/TagEditItemDivider" />
		<LinearLayout style="@style/TagEditItemLayout">
			<TextView android:text="@string/Albums" style="@style/TagEditItemText" />
			<com.pantech.app.music.view.SkyEditText android:id="@id/tag_edittext_album" android:maxLength="100" android:inputType="textAutoCorrect" style="@style/TagEditItemEditText" />
		</LinearLayout>
		<LinearLayout style="@style/TagEditItemDivider" />
		<LinearLayout style="@style/TagEditItemLayout">
			<TextView android:text="@string/Genre" style="@style/TagEditItemText" />
			<Spinner android:textSize="22.0sp" android:id="@id/tag_spinner_genre" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="false" android:singleLine="true" />
			<com.pantech.app.music.view.SkyEditText android:id="@id/tag_edittext_genre" android:maxLength="100" android:inputType="textAutoCorrect" style="@style/TagEditItemEditText" />
		</LinearLayout>
		<LinearLayout style="@style/TagEditItemDivider" />
		<LinearLayout style="@style/TagEditItemLayout">
			<TextView android:text="@string/TrackNumber" style="@style/TagEditItemText" />
			<com.pantech.app.music.view.SkyEditText android:id="@id/tag_edittext_track" android:maxLength="3" android:inputType="numberDecimal" android:imeOptions="actionDone" style="@style/TagEditItemEditText" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
