<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/nocontent_layout" android:background="#ff1f1f1f" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
			<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_no_contents_songs" android:contentDescription="@string/ContentDescription" />
			<TextView android:textSize="21.0dip" android:textColor="#ffdcdcdc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="50.0dip" android:text="@string/TitleEmptyContentsMainString" />
			<TextView android:textSize="17.0dip" android:textColor="#ffaaaaaa" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/TitleEmptyContentsSubString" android:lineSpacingExtra="4.0dip" />
		</LinearLayout>
	</RelativeLayout>
</LinearLayout>
