<?xml version="1.0" encoding="utf-8" ?>
<com.pantech.app.music.player.oneplayer.circularview.CircularRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/oneplayer_help_preview_layout" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
		<RelativeLayout android:layout_gravity="end" android:id="@id/oneplayer_help_exit_layout" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginEnd="7.0dip">
			<ImageButton android:id="@id/oneplayer_help_exit_btn" android:background="#00000000" android:layout_width="34.0dip" android:layout_height="34.0dip" android:src="@drawable/btn_oneplayer_help_exit" android:scaleType="fitXY" android:layout_centerVertical="true" android:contentDescription="@string/ContentDescription" android:layout_alignParentEnd="false" />
		</RelativeLayout>
		<LinearLayout android:orientation="vertical" android:id="@id/oneplayer_help_content_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="26.0dip" android:layout_marginRight="26.0dip">
			<LinearLayout android:orientation="vertical" android:id="@id/oneplayer_help_1st_tip_layout" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:textSize="21.0dip" android:textColor="#ff54b4ff" android:id="@id/oneplayer_help_1st_tip_layout_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/oneplayer_name" android:shadowColor="#80000000" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="2.0" />
				<LinearLayout android:layout_width="fill_parent" android:layout_height="8.0dip" />
				<TextView android:textSize="14.0dip" android:textColor="@color/oneplayer_help_textcolor" android:id="@id/oneplayer_help_1st_tip_layout_subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/oneplayer_help_guide_text1" android:shadowColor="#66000000" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="1.0" android:lineSpacingExtra="4.0dip" />
			</LinearLayout>
			<LinearLayout android:orientation="vertical" android:id="@id/oneplayer_help_2nd_tip_layout" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:textSize="21.0dip" android:textColor="#ff54b4ff" android:id="@id/oneplayer_help_2nd_tip_layout_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detailcontroller_name" android:shadowColor="#80000000" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="2.0" />
				<LinearLayout android:layout_width="fill_parent" android:layout_height="8.0dip" />
				<TextView android:textSize="14.0dip" android:textColor="@color/oneplayer_help_textcolor" android:id="@id/oneplayer_help_2nd_tip_layout_subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/oneplayer_help_guide_text3" android:shadowColor="#66000000" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="1.0" android:lineSpacingExtra="4.0dip" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</com.pantech.app.music.player.oneplayer.circularview.CircularRelativeLayout>
