<?xml version="1.0" encoding="utf-8" ?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@id/list_fragment_main_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<android.support.design.widget.AppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Light" android:id="@id/appBarLayout" android:layout_width="fill_parent" android:layout_height="180.0dip">
		<android.support.design.widget.CollapsingToolbarLayout android:id="@id/list_fragment_collapsingToolbar" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_scrollFlags="exitUntilCollapsed|scroll" app:expandedTitleMarginStart="9.0dip" app:expandedTitleMarginBottom="12.0dip" app:expandedTitleTextAppearance="@style/TextAppearance.Expanded.Title" app:collapsedTitleTextAppearance="@style/TextAppearance.Collapsed.Title">
			<ImageView android:id="@id/album_detailview_albumart" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" android:transitionName="@string/transition_albumArt" app:layout_collapseMode="parallax" app:layout_collapseParallaxMultiplier="0.7" />
			<RelativeLayout android:background="@drawable/album_gradation" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
				<LinearLayout android:background="#cc000000" android:layout_width="fill_parent" android:layout_height="37.0dip" android:layout_alignParentBottom="true" />
			</RelativeLayout>
			<android.support.v7.widget.Toolbar android:id="@id/list_fragment_toolbar" app:layout_collapseMode="pin" style="@style/ListToolbarStyle" />
		</android.support.design.widget.CollapsingToolbarLayout>
	</android.support.design.widget.AppBarLayout>
	<android.support.v7.widget.RecyclerView android:id="@id/recyclerView" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:transitionName="@string/transition_recyclerView" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</android.support.design.widget.CoordinatorLayout>
