<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="41.0dip" android:paddingStart="13.0dip" android:paddingEnd="13.0dip">
		<TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/widget_header_nowplayinglist" android:singleLine="true" android:layout_weight="1.0" />
		<ImageButton android:id="@id/widget_player_shuffle_button" android:background="@drawable/ripple_effect_for_36dip" android:layout_width="31.0dip" android:layout_height="31.0dip" android:src="@drawable/ic_widget_shuffle_nor" android:contentDescription="@string/app_name" />
		<ImageButton android:id="@id/widget_player_repeat_button" android:background="@drawable/ripple_effect_for_36dip" android:layout_width="31.0dip" android:layout_height="31.0dip" android:src="@drawable/ic_widget_loop_nor" android:contentDescription="@string/app_name" android:layout_marginStart="15.0dip" />
		<ImageButton android:contentDescription="@string/app_name" android:layout_marginStart="11.0dip" style="@style/WidgetDivider" />
		<ImageButton android:id="@id/widget_player_home_button" android:background="@drawable/ripple_effect_for_36dip" android:layout_width="31.0dip" android:layout_height="31.0dip" android:src="@drawable/ic_widget_play_app_nor" android:contentDescription="@string/app_name" android:layout_marginStart="11.0dip" />
	</LinearLayout>
	<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
		<ListView android:id="@id/widget_player_nowPlaying" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="1.0px" android:cacheColorHint="#00000000" android:divider="#33ffffff" android:dividerHeight="1.0px" android:fastScrollEnabled="true" android:fadeScrollbars="false" />
		<TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/widget_player_no_content" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/WidgetDefaultViewMessage" android:layout_centerInParent="true" />
	</RelativeLayout>
</LinearLayout>
